<resources>
    <string name="app_name">EncryptionApp</string>
    <string name="keyText">Key:</string>
    <string name="keyPlaceholder">No active key.</string>
    <string name="createKeyButton">Generate Key</string>
    <string name="headerSubstitution">Substitution Cipher</string>
    <string name="plainTextHint">Enter plain text to be encrypted.</string>
    <string name="encryptButtonText">Encrypt</string>
    <string name="cipherTextPlaceholder">Cipher text appears here.</string>
    <string name="decryptButtonText">Decrypt</string>
    <string name="cipherTextHint">Enter cipher text.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customKeyHint">Enter Custom Key</string>
    <string name="customKeyInstructions">Key must contain each letter of alphabet once.</string>
    <string name="saveKeyButton">Save Key</string>
    <string name="cipherToBreakHint">Enter cipher to break.</string>
    <string name="breakCipherButton">Break Cipher</string>
    <string name="breakerResultText">Substitution breaker results appear here.</string>
</resources>