<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryLightColor"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regularMargin"
        android:text="@string/decryptButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/textView3"
        style="@style/textStyle"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/keyPlaceholder"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="52dp"
        android:layout_margin="@dimen/regularMargin"
        android:layout_marginStart="12dp"
        android:padding="@dimen/regularPadding"
        android:text="@string/keyText"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/headerMargin"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:padding="@dimen/headerPadding"
        android:text="@string/headerSubstitution"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/createKeyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/cardViewStyle"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primaryColor"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:layout_margin="@dimen/regularMargin"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/plainTextHint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="#000000" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/regularMargin"
        android:layout_marginTop="46dp"
        android:text="@string/encryptButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        style="@style/cardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primaryColor"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <TextView
            android:id="@+id/textView5"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="207dp"
            android:text="@string/cipherTextPlaceholder"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>